--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,8 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - libx11-dev
+      - zlib1g-dev
+      - libpng12-dev
+      - libxtst-dev
+      - g++-4.8
+      - gcc-4.8
