--- a/.travis.yml
+++ b/.travis.yml
@@ -1,25 +1,6 @@
 language: cpp
 install: make
 script: make
-compiler: gcc
+compiler: clang
 os:
-- linux
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - libx11-dev
-      - zlib1g-dev
-      - libpng12-dev
-      - libxtst-dev
-
-
-before_install:
-  # use g++-4.8 on Linux
-  - $CXX --version
-
-before_script:
-  # Start xvfb
-  - if [[ $TRAVIS_OS_NAME == "linux" ]]; then export DISPLAY=:99.0; fi
-  - if [[ $TRAVIS_OS_NAME == "linux" ]]; then sh -e /etc/init.d/xvfb start; fi 
+- osx
